--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,29 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.custom-container {
+  background-color: white;
+  margin: 5rem;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.custom-thead {
+  background-color: black;
+  color: white;
+  border-bottom: 2px solid red;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.custom-th {
+  /* Hacer esta columna más ancha */
+  width: 30%;
 }
 
-.card {
-  padding: 2em;
+.custom-td {
+  /* Ajusta el ancho si es necesario para que coincida con el encabezado */
+  width: 30%;
 }
 
-.read-the-docs {
-  color: #888;
+.table-mod {
+  width: 100%;
 }
+
